@@ -67,7 +67,7 @@ protected:
 protected Q_SLOTS:
 
     void slotCancel();
-    void slotRenameSuccessded(const QUrl& url);
+    void slotRenameFinished();
     void slotRenameFailed(const QUrl& url);
 
 private Q_SLOTS:
