@@ -611,4 +611,5 @@ BUGFIXES:
 546 ==> 399292 - Video file datetime not shown correctly after editing.
 547 ==> 370553 - Adjust date - not possible to update "digikam timestamp".
 548 ==> 329091 - MySQL : needs to set "max-allowed-packet" server settings from 4.096 to 16.777.216 to prevent Maintenance tool crash.
-549 ==> 
+549 ==> 399406 - Digikam Crash on advance rename.
+550 ==> 
